# NagarikAI

./: .env.example  .gitignore  DATA_COLLECTION_FINAL_REPORT.md  DATA_COLLECTION_SUMMARY.md  DATA_SOURCES_RESEARCH.md  LIVE_DATA_SOURCES_MAP.md  QUICK_START_50_SCHEMES.md  README.md  SCHEMES_LIST.txt  add_form_field_mappings.py  add_more_schemes.py  create_comprehensive_schemes_db.py  debug_profile.json  debug_profile_turn3.json  master_config.json  pyproject.toml  requirements.txt  schema.sql  step3_scrape_bihar.py  step4_scrape_central.py  step5_cdn_pdf_scrape.py  step6_scrape_states.py  step7_merge_all.py  step8_scrape_additional.py  step9_scrape_additional_live_sources.py  transform_to_comprehensive_schema.py  verify_env.py
app/: main.py
app/agents/: __init__.py  graph.py  state.py
app/api/: __init__.py  dependencies.py  routes.py
app/core/: __init__.py  config.py  database.py
app/ingestion/: __init__.py  pipeline.py
app/scrapers/: __init__.py  (+2 more)
backend/: .dockerignore  Dockerfile  main.py  railway.json  startup.sh
data/: additional_raw.json  additional_schemes_all.json  central_raw.json  raw_agriculture_all.json  schemes_comprehensive_v2.json  schemes_comprehensive_v2_with_forms.json  state_raw.json  tier1_additional_schemes.json  tier2_additional_schemes.json
frontend/: AVATAR_IMPLEMENTATION.md  AVATAR_INTEGRATIONS.md  AVATAR_QUICK_REF.md  AVATAR_README.md  AVATAR_STATE_MACHINE.md  README.md  index.html
scrapers/: combine_raw_data.py  scrape_myscheme.py  scrape_states.py  seed_tier1.py  validate_raw.py
tests/: __init__.py  conftest.py  test_api.py
(+96 files in other folders)
